deployment/manual/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: key-server-service
  labels:
    app: key-server
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: https
      port: 8443
      targetPort: 8443
  selector:
    app: key-server
  type: ClusterIP
